# minip2p

./: .gitignore  .ignore  AGENTS.md  Cargo.toml  README.md  dx-plan.md  holepunch-plan.md  justfile  plan.md
.cargo/: config.toml
.cursor/rules/: pr-review.mdc
.cursor/skills/pr-review/: SKILL.md  reference.md
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/autonat/: Cargo.toml  README.md
crates/autonat/src/: lib.rs
crates/circuit/: Cargo.toml  README.md
crates/circuit/src/: lib.rs
crates/core/: Cargo.toml  README.md
crates/core/benches/: multiaddr.rs
crates/core/src/: candidates.rs  direct_paths.rs  external_addresses.rs  lib.rs  multiaddr.rs  peer_addr.rs  protocol.rs  sans_io.rs
crates/dcutr/: Cargo.toml  README.md
crates/dcutr/src/: lib.rs  message.rs
crates/discovery/: Cargo.toml  README.md
crates/discovery/src/: agent.rs  config.rs  events.rs  lib.rs  message.rs
crates/identify/: Cargo.toml  README.md
crates/identify/src/: lib.rs  message.rs
crates/identity/: Cargo.toml  README.md
crates/identity/src/: ed25519.rs  peer_id.rs
crates/minip2p/: Cargo.toml  README.md
crates/minip2p/src/: discovery.rs  lib.rs  nat.rs  pubsub.rs
crates/minip2p/tests/: discovery.rs  nat.rs  pubsub.rs
crates/multistream-select/: Cargo.toml  README.md
crates/multistream-select/src/: lib.rs
crates/nat/: Cargo.toml  README.md
crates/nat/src/: agent.rs  attempt.rs  config.rs  events.rs  housekeeping.rs  inbound.rs  lib.rs  types.rs
crates/nat/tests/: arbitration.rs  housekeeping.rs  inbound.rs  two_agents.rs
crates/nat/tests/common/: mod.rs
crates/noise/: Cargo.toml  README.md
crates/noise/src/: cipher.rs  frames.rs  handshake.rs  hkdf.rs  lib.rs  payload.rs
crates/noise/tests/: libp2p_interop.rs
crates/noise/tests/fixtures/: README.md  libp2p-noise-0.46.1.txt  noise-c-basic-xx.txt  regenerate-libp2p.sh  regenerate-noise-c.sh
crates/noise/tests/fixtures/generate-libp2p/: Cargo.toml
crates/noise/tests/fixtures/generate-libp2p/src/: main.rs
crates/ping/: Cargo.toml  README.md
crates/ping/src/: lib.rs
crates/pubsub/: Cargo.toml  README.md
crates/pubsub/src/: agent.rs  config.rs  engine.rs  events.rs  lib.rs  message.rs  seen.rs
crates/pubsub/src/gossipsub/: agent.rs  config.rs  mcache.rs  mod.rs
crates/pubsub/tests/: agent.rs  golden_go.rs  gossipsub.rs
crates/pubsub/tests/testdata/: README.md  go_control_rpc.hex  go_peer_id.txt  go_signed_message_rpc.hex
crates/pubsub/tests/testdata/golden-go/: go.mod  go.sum  main.go
crates/quic/: Cargo.toml
crates/relay/: Cargo.toml  README.md
crates/relay/src/: lib.rs  message.rs
crates/stun/: Cargo.toml  README.md
crates/stun/src/: lib.rs
crates/swarm/: Cargo.toml  README.md
crates/swarm/src/: builder.rs  core.rs  driver.rs  events.rs  lib.rs
crates/swarm/tests/: relay_holepunch_flow.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs
crates/tls/: Cargo.toml
crates/tls/src/: generate.rs  lib.rs  pem.rs  verify.rs
crates/transport/: Cargo.toml  README.md
crates/transport/src/: error.rs  event.rs  lib.rs  transport.rs
crates/yamux/: Cargo.toml  README.md
crates/yamux/src/: frame.rs  lib.rs  session.rs
crates/yamux/tests/: interop.rs
crates/yamux/tests/fixtures/: README.md  regenerate-yamux.sh  yamux-0.13.8.txt
crates/yamux/tests/fixtures/generate-yamux/: Cargo.toml
crates/yamux/tests/fixtures/generate-yamux/src/: main.rs
docs/: .gitignore  README.md  blume.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  quic-transport-plan.md  skills-lock.json  theme.css
docs/md/: index.mdx  installation.mdx
docs/md/getting-started/: installation.mdx  mental-model.mdx  quickstart.mdx
docs/md/guides/: concepts.mdx  custom-protocols.mdx  discover-peers.mdx  discovery.mdx  drive-events.mdx  events-and-timeouts.mdx  identity-and-addresses.mdx  identity.mdx  listen-and-connect.mdx  listen-and-dial.mdx  mental-model.mdx  nat.mdx  pubsub.mdx  register-a-protocol.mdx  traverse-nat.mdx
docs/md/quickstart/: connect-peers.mdx  install.mdx  installation.mdx
docs/md/reference/: feature-matrix.mdx  glossary.mdx  troubleshooting.mdx
docs/snippets/custom-stream/: Cargo.toml
docs/snippets/quickstart/: Cargo.toml
examples/chat/: Cargo.toml  README.md
examples/chat/src/: cli.rs  main.rs  modes.rs  runtime.rs
examples/chat/tests/: chat.rs
examples/common/: Cargo.toml
examples/common/src/: lib.rs
examples/peer/: Cargo.toml  README.md
examples/peer/src/: cli.rs  direct.rs  main.rs  modes.rs  relay.rs  runtime.rs
examples/peer/tests/: direct.rs  ping.rs
examples/ping-app/: Cargo.toml  README.md
examples/ping-app/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: wire_inputs.rs
tests/support/: relay.rs
transports/quic/: Cargo.toml  README.md
transports/quic/src/: auth.rs  config.rs  connection.rs  lib.rs  multiaddr.rs
transports/quic/tests/: ping_e2e.rs  swarm_e2e.rs  transport_contract.rs  two_peer.rs
