[workspace]
resolver = "3"
exclude = ["fuzz"]
members = [
    "crates/autonat",
    "crates/core",
    "crates/dcutr",
    "crates/identify",
    "crates/identity",
    "crates/minip2p",
    "crates/multistream-select",
    "crates/ping",
    "crates/relay",
    "crates/swarm",
    "crates/tls",
    "crates/transport",
    "transports/quic",
    "examples/peer",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[workspace.lints.rust]
unsafe_code = "forbid"
