[workspace]
resolver = "3"
exclude = ["fuzz"]
members = [
    "crates/autonat",
    "crates/circuit",
    "crates/core",
    "crates/dcutr",
    "crates/discovery",
    "crates/identify",
    "crates/identity",
    "crates/minip2p",
    "crates/multistream-select",
    "crates/nat",
    "crates/noise",
    "crates/ping",
    "crates/pubsub",
    "crates/relay",
    "crates/swarm",
    "crates/test-support",
    "crates/tls",
    "crates/transport",
    "crates/yamux",
    "transports/quic",
    "examples/chat",
    "examples/common",
    "examples/peer",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[workspace.lints.rust]
unsafe_code = "forbid"
