[package]
name = "minip2p-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "README.md"

[lints]
workspace = true

[features]
default = ["std"]
std = ["minip2p-identity/std", "thiserror/std"]

[dependencies]
minip2p-identity = { path = "../identity", default-features = false }
thiserror = { version = "2.0.18", default-features = false }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "multiaddr"
harness = false
