[package]
name = "minip2p-nat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = [
    "minip2p-autonat/std",
    "minip2p-core/std",
    "minip2p-dcutr/std",
    "minip2p-relay/std",
    "minip2p-swarm/std",
    "minip2p-transport/std",
    "thiserror/std",
]

[dependencies]
minip2p-autonat = { path = "../autonat", default-features = false }
minip2p-core = { path = "../core", default-features = false }
minip2p-dcutr = { path = "../dcutr", default-features = false }
minip2p-relay = { path = "../relay", default-features = false }
minip2p-swarm = { path = "../swarm", default-features = false }
minip2p-transport = { path = "../transport", default-features = false }
thiserror = { version = "2.0.18", default-features = false }
