[package]
name = "minip2p-noise"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "README.md"

[lints]
workspace = true

[features]
default = ["std"]
std = [
    "minip2p-core/std",
    "minip2p-identity/std",
    "thiserror/std",
]

[dependencies]
minip2p-core = { path = "../core", default-features = false }
minip2p-identity = { path = "../identity", default-features = false, features = ["ed25519"] }
x25519-dalek = { version = "3.0.0", default-features = false, features = ["static_secrets"] }
chacha20poly1305 = { version = "0.11.0", default-features = false, features = ["alloc"] }
sha2 = { version = "0.11.0", default-features = false }
hmac = { version = "0.13.0", default-features = false }
thiserror = { version = "2.0.18", default-features = false }
