[package]
name = "minip2p-ping"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "README.md"

[lints]
workspace = true

[features]
default = ["std"]
std = [
    "minip2p-core/std",
    "minip2p-transport/std",
    "thiserror/std",
]

[dependencies]
minip2p-core = { path = "../core", default-features = false }
minip2p-transport = { path = "../transport", default-features = false }
thiserror = { version = "2.0.18", default-features = false }
