[package]
name = "minip2p-swarm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = [
    "minip2p-core/std",
    "minip2p-identify/std",
    "minip2p-identity/std",
    "minip2p-multistream-select/std",
    "minip2p-ping/std",
    "minip2p-transport/std",
    "thiserror/std",
    "dep:getrandom",
]

[dependencies]
minip2p-core = { path = "../core", default-features = false }
minip2p-identify = { path = "../identify", default-features = false }
minip2p-identity = { path = "../identity", default-features = false, features = ["ed25519"] }
minip2p-multistream-select = { path = "../multistream-select", default-features = false }
minip2p-ping = { path = "../ping", default-features = false }
minip2p-transport = { path = "../transport", default-features = false }
thiserror = { version = "2.0.18", default-features = false }
getrandom = { version = "0.4.3", optional = true }

[dev-dependencies]
minip2p-relay = { path = "../relay" }
minip2p-dcutr = { path = "../dcutr" }
