[package]
name = "minip2p-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = ["minip2p-core/std", "thiserror/std"]

[dependencies]
minip2p-core = { path = "../core", default-features = false }
thiserror = { version = "2.0.18", default-features = false }
