[package]
name = "minip2p-peer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

# NAT-aware echo-ping demo: `listen` echoes, `dial` pings once per second
# and tags each RTT with the current path (relayed or direct), so a mid-run
# hole-punch upgrade is directly visible. See examples/peer/README.md.
[[bin]]
name = "minip2p-peer"
path = "src/main.rs"

[dependencies]
minip2p = { path = "../../crates/minip2p", features = ["nat"] }
minip2p-example-common = { path = "../common" }
