[package]
name = "minip2p-ping-app"
version = "0.1.0"
edition = "2024"
publish = false

# Minimal application-style example: create two QUIC peers, connect them,
# and run one ping through the swarm.
[[bin]]
name = "minip2p-ping-app"
path = "src/main.rs"

[dependencies]
minip2p = { path = "../../crates/minip2p" }
