[package]
name = "minip2p-quic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
minip2p-transport = { path = "../../crates/transport" }
minip2p-identity = { path = "../../crates/identity" }
minip2p-core = { path = "../../crates/core" }
minip2p-tls = { path = "../../crates/tls" }
boring = "4.22.0"
quiche = { version = "0.29.2", features = ["boringssl-boring-crate"] }
getrandom = "0.4.3"
hmac = "0.13.0"
sha2 = "0.11.0"

[dev-dependencies]
minip2p-multistream-select = { path = "../../crates/multistream-select" }
minip2p-ping = { path = "../../crates/ping" }
minip2p-identify = { path = "../../crates/identify" }
minip2p-swarm = { path = "../../crates/swarm" }
minip2p-identity = { path = "../../crates/identity" }
