[workspace]

[package]
name = "generate-libp2p-noise-fixture"
version = "0.0.0"
edition = "2024"
rust-version = "1.88"
publish = false

[dependencies]
futures = "0.3.31"
libp2p-core = "=0.43.1"
libp2p-identity = { version = "=0.2.12", features = ["ed25519", "rand"] }
libp2p-noise = "=0.46.1"
minip2p-core = { path = "../../../../core" }
minip2p-identity = { path = "../../../../identity", features = ["ed25519"] }
minip2p-noise = { path = "../../.." }
rand = "=0.8.5"
snow = "=0.9.6"
x25519-dalek = { version = "=3.0.0", features = ["static_secrets"] }
